--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 				<div class ="row">
 					<div class="col-12">
 						<hr>
-						<div class="col-12">Score</div>
-						<div id="wlMessage"></div>
+<!-- 						<div class="col-12">Score</div>
+ -->						<div id="wlMessage"></div>
 						<div class="row">
 							<div class="col-6">
 								<div><h6>Wins:</h6></div>
