Solving for duplicate numbers

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 								<div id ="wins"></div>
 							</div>
 							<div class="col-6">
-								<div><h6>Loss:</h6></div>
-								<div id ="loss"></div>
+								<div><h6>Losses:</h6></div>
+								<div id ="losses"></div>
 							</div>
 						</div>
 					</div>
