--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
 	<title>Crystal Game</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-   	
-   	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+	crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 
 
@@ -35,10 +35,34 @@
 			<div class="text-center">
 				
 				<!-- Instructions --> 
-				<div class ="row">
-					<div class="col-12">
-						<h5>Instructions</h5>
-						<p> lorem ipsum some instructions</p>
+				<!-- Button to start Instructions Modal -->
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+					Instructions
+				</button>
+
+				<!-- Instructions Modal -->
+				<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLabel">How to Play</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<p> Welcome to _____ </p>
+								<p>Each ______ represents a random hidden number. <br/><br/>
+									Click the different ______ to add to match the number at the top. <br/><br/>
+									Match the number with the top number and win a point! <br/><br/>
+									The game will reset if you win or lose and then the ______ will have new numbers assigned to them. <br/><br/>
+									Good luck!!! <i class="fas fa-smile-beam"></i>
+								</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -52,10 +76,10 @@
 
 				<!-- Crystals --> 
 				<div class ="row">
-				  	<div class ="col-3 crystal_1"><img src="assets/images/crystal-01.svg"></div>
-				  	<div class ="col-3 crystal_2"><img src="assets/images/crystal-02.svg"></div>
-				  	<div class ="col-3 crystal_3"><img src="assets/images/crystal-03.svg"></div>
-				  	<div class ="col-3 crystal_4"><img src="assets/images/crystal-04.svg"></div>
+					<div class ="col-3 crystal_1"><img src="assets/images/crystal-01.svg"></div>
+					<div class ="col-3 crystal_2"><img src="assets/images/crystal-02.svg"></div>
+					<div class ="col-3 crystal_3"><img src="assets/images/crystal-03.svg"></div>
+					<div class ="col-3 crystal_4"><img src="assets/images/crystal-04.svg"></div>
 				</div>
 
 				<!-- User number --> 
@@ -71,22 +95,22 @@
 					<div class="col-12">
 						<hr>
 <!-- 						<div class="col-12">Score</div>
- -->						<div id="wlMessage"></div>
-						<div class="row">
-							<div class="col-6">
-								<div><h6>Wins:</h6></div>
-								<div id ="wins"></div>
-							</div>
-							<div class="col-6">
-								<div><h6>Losses:</h6></div>
-								<div id ="losses"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
+-->						<div id="wlMessage"></div>
+<div class="row">
+	<div class="col-6">
+		<div><h6>Wins:</h6></div>
+		<div id ="wins"></div>
 	</div>
+	<div class="col-6">
+		<div><h6>Losses:</h6></div>
+		<div id ="losses"></div>
+	</div>
+</div>
+</div>
+</div>
+
+
+</div>
 
 <script src="assets/javascript/game.js"></script>
 
