Testing new duplicate method

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
 				<!-- Crystals --> 
 				<div class ="row">
-					<div class ="col-3 crystal_1"><img src="assets/images/crystal-01.svg"></div>
-					<div class ="col-3 crystal_2"><img src="assets/images/crystal-02.svg"></div>
-					<div class ="col-3 crystal_3"><img src="assets/images/crystal-03.svg"></div>
-					<div class ="col-3 crystal_4"><img src="assets/images/crystal-04.svg"></div>
+					<div class ="col-3 cimg crystal_1"><img src="assets/images/crystal-01.svg"></div>
+					<div class ="col-3 cimg crystal_2"><img src="assets/images/crystal-02.svg"></div>
+					<div class ="col-3 cimg crystal_3"><img src="assets/images/crystal-03.svg"></div>
+					<div class ="col-3 cimg crystal_4"><img src="assets/images/crystal-04.svg"></div>
 				</div>
 
 				<!-- User number --> 
