Match this makes a new number! And displays correctly in the console and DOM

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="container">
 		
 		<!-- The Gamebox --> 
-		<div class="jumbotron">
+		<div class="jumbotron bg">
 			<h1 class="text-center">Crystal Game</h1>
 			<div class="text-center">
 				
